# withoutai

./: .gitignore  Makefile  flake.nix  nixvim-base.nix  nixvim.nix  pyproject.toml  pytest.ini
docs/: models.md
frontend/: next.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: chat.tsx  copilot_provider.tsx  models_selector.tsx
src/: configuration.py  dependencies.py  main.py
src/api/: app.py  exceptions.py
src/api/middleware/: logging_middleware.py
src/api/router/: __init__.py  default.py  health.py  models.py
src/api/router/openai/: router.py
src/api/router/openai/models/: response.py  router.py
src/app/: deps.py
src/app/services/ai_models/: models.py
src/containers/: __init__.py  app.py  infra.py
src/domain/ai_models/ports/: __init__.py  model.py  registry.py
src/infra/: deps.py
src/infra/ai_models/: deps.py
src/infra/ai_models/common/adapters/: __init__.py  registry.py
src/infra/ai_models/litellm/: adapter.py  register.py
src/models/: agent_state.py  check.py  models_info.py
src/services/: agent_service.py  llm_service.py  logger_service.py  models_service.py
tests/: conftest.py
tests/api/router/: test_default.py
tests/api/router/openai/models/: test_models.py
tests/configs/: __init__.py  default.py
traefik/: dynamic.yml  traefik.yml
