[project]
name = "without-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.49.0",
    "fastapi>=0.136.3",
    "fastapi-cli>=0.0.24",
    "langchain-litellm>=0.6.6",
    "litellm>=1.89.0",
    "pydantic>=2.13.4",
]

[tool.fastapi]
entrypoint = "src.main:app"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.4.0",
]

[pytest]
asyncio_mode = "auto"
testpaths = "tests"
addopts = "-v --tb=short"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
