[project]
name = "without-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.49.1",
    "fastapi>=0.136.3",
    "fastapi-cli>=0.0.24",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1.0",
]

[tool.fastapi]
entrypoint = "main:app"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.4.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.setuptools]
packages = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.mypy]
python_executable = ".venv/bin/python"
